cmake_minimum_required(VERSION 3.26)
project(leetcodeSolutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcodeSolutions
        problems/1356_sort-integers-by-the-number-of-1-bits.cpp
        problems/458_poor-pigs.cpp
        problems/1220_count-vowels-permutation.cpp
        problems/5_longest-palindromic-substring.cpp
        problems/823_binary-trees-with-factors.cpp
        problems/779_k-th-symbol-in-gramma.cpp
        problems/515_find-largest-value-in-each-tree-row.cpp
        problems/342_power-of-four.cpp
        problems/1793_maximum-score-of-a-good-subarray.cpp
        problems/1425_constrained-subsequence-sum.cpp
        problems/341_flatten-nested-list-iterator.cpp
        problems/844_backspace-string-compare.cpp
        problems/2050_parallel-courses-iii.cpp
        problems/1361_validate-binary-tree-nodes.cpp
        problems/119_pascals-triangle-ii.cpp
)
